metadata-sfdx/force-app/main/default/objects/RelatedListSetting__mdt/fields/OrderFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>OrderFieldAPIName__c</fullName>
    <label>Order Field API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>