metadata-sfdx/force-app/main/default/objects/RelatedListSetting__mdt/fields/ParentObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectAPIName__c</fullName>
    <label>Parent Object API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>