metadata-sfdx/force-app/main/default/objects/RelatedListSetting__mdt/fields/ParentRefrenceFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>ParentRefrenceFieldAPIName__c</fullName>
    <label>Parent Refrence Field API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>