metadata-sfdx/force-app/main/default/objects/RelatedListSetting__mdt/fields/QueryFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>QueryFieldSetName__c</fullName>
    <label>Query Field Set Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>