metadata-sfdx/force-app/main/default/objects/RelatedListSetting__mdt/fields/RecordsPerPage__c.field-meta.xml
<CustomField>
    <fullName>RecordsPerPage__c</fullName>
    <label>Records Per Page</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>