metadata-sfdx/force-app/main/default/objects/RelatedListSetting__mdt/fields/RelatedListSectionName__c.field-meta.xml
<CustomField>
    <fullName>RelatedListSectionName__c</fullName>
    <label>Related List Section Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>