metadata-sfdx/force-app/main/default/objects/RelatedListSetting__mdt/fields/RelationshipFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>RelationshipFieldAPIName__c</fullName>
    <label>Relationship Field API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>