metadata-sfdx/force-app/main/default/objects/RelatedListSetting__mdt/fields/TableDisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>TableDisplayOrder__c</fullName>
    <label>Table Display Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>